--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
   pinput: ^3.0.1
+  flutter_webrtc: ^0.9.48+hotfix.1
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
