--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   pinput: ^3.0.1
   flutter_webrtc: ^0.9.48+hotfix.1
   socket_io_client: ^2.0.3+1
+  pusher_channels_flutter: ^2.2.1
 
 dev_dependencies:
   flutter_test:
